歌手详情使用vuex

--- a/src/common/less/_modules/_variables.less
+++ b/src/common/less/_modules/_variables.less
@@ -26,7 +26,7 @@
 //背景色
 @body-bg-white: #fff;        //白色背景
 @body-bg-gray:#f8f8f8;       //灰色背景
-@body-bg-grayer:#f2f2f2;     //灰色背景
+@body-bg-grayer:#eeeeee;     //灰色背景
 @body-bg-black:#14191f;      //黑色背景
 @body-bg-blacker:#f4f4f4;    //黑色背景
 @body-bg-yellow:#f18c29;     //黄色背景
