歌手页面完成

--- a/src/common/less/_modules/_variables.less
+++ b/src/common/less/_modules/_variables.less
@@ -29,7 +29,7 @@
 @body-bg-grayer:#eeeeee;     //灰色背景
 @body-bg-black:#14191f;      //黑色背景
 @body-bg-blacker:#f4f4f4;    //黑色背景
-@body-bg-yellow:#f18c29;     //黄色背景
+@body-bg-yellow:#FECC32;     //黄色背景
 
 //字体颜色
 @text-color:#000000;         //标题
@@ -37,7 +37,7 @@
 @text-color-lighter:#979797; //版权小字
 @text-color-gray:#474949;    //灰色
 @text-color-grayer:#ababab;  //灰色
-@text-color-yellow:#f18c29;  //黄色
+@text-color-yellow:#FECC32;  //黄色
 @text-color-white:#ffffff;   //白色
 
 //线条颜色
