--- a/src/common/less/reset.less
+++ b/src/common/less/reset.less
@@ -1,6 +1,6 @@
 html {
-  color: #424242;
-  background: #eee;
+  color: #fff;
+  background: #222;
   overflow-y: scroll;
   -webkit-text-size-adjust: 100%;
   -ms-text-size-adjust: 100%;
