--- a/src/common/less/_modules/_variables.less
+++ b/src/common/less/_modules/_variables.less
@@ -65,7 +65,10 @@
 @font-family-base: @font-family-sans-serif;    
 
 
-/*字体大小*/
+/*图标字体大小*/
+@iconfont-size-s: 20px;
+@iconfont-size-m: 30px;
+@iconfont-size-l: 40px;
 
 //内容文字
 @font-size-small-s: 10px;    //特小号
