推荐歌单完成

--- a/src/common/less/_modules/_mixins.less
+++ b/src/common/less/_modules/_mixins.less
@@ -9,7 +9,7 @@
 @import "../_mixins/resize.less";       //大小变化
 @import "../_mixins/responsive-visibility.less";    //?
 @import "../_mixins/size.less";         //宽高设置
-@import "../_mixins/text-overflow.less";//文字隐藏
+@import "../_mixins/text-overflow.less";//文字不换行，多的省略
 @import "../_mixins/vendor-prefixes.less";  //设置Animations BoxShadow BoxSizing Transition 
 @import "../_mixins/flexbox.less";      //flex弹性布局
 @import "../_mixins/buttons.less";      //btn样式
