--- a/src/common/less/_modules/_variables.less
+++ b/src/common/less/_modules/_variables.less
@@ -28,13 +28,13 @@
 @body-bg-gray:#f8f8f8;       //灰色背景
 @body-bg-grayer:#eeeeee;     //灰色背景
 @body-bg-black:#14191f;      //黑色背景
-@body-bg-blacker:#f4f4f4;    //黑色背景
+@body-bg-blacker:#333333;    //黑色背景
 @body-bg-yellow:#FECC32;     //黄色背景
 
 //字体颜色
 @text-color:#000000;         //标题
 @text-color-light:#474949;   //正文 
-@text-color-lighter:#979797; //版权小字
+@text-color-lighter:#818181; //版权小字
 @text-color-gray:#474949;    //灰色
 @text-color-grayer:#ababab;  //灰色
 @text-color-yellow:#FECC32;  //黄色
