--- a/src/common/less/iconfont.less
+++ b/src/common/less/iconfont.less
@@ -45,3 +45,9 @@
 
 .icon-user:before { content: "\e64f"; }
 
+.icon-yinfu:before { content: "\e630"; }
+
+.icon-del:before { content: "\e600"; }
+
+.icon-tx:before { content: "\e6da"; }
+
