搜索页面完成

--- a/src/common/less/_modules/_mixins.less
+++ b/src/common/less/_modules/_mixins.less
@@ -13,7 +13,7 @@
 @import "../_mixins/vendor-prefixes.less";  //设置Animations BoxShadow BoxSizing Transition 
 @import "../_mixins/flexbox.less";      //flex弹性布局
 @import "../_mixins/buttons.less";      //btn样式
-@import "../_mixins/bg-img2x3x.less";   //2x3x背景图，边框1像素
+@import "../_mixins/bg-img2x3x.less";   //2x3x背景图、边框1像素、扩展点击区域
 
 
 // Skins
